--- a/shoppi/app/build.gradle
+++ b/shoppi/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:$navVersion")
     implementation("androidx.navigation:navigation-ui-ktx:$navVersion")
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
 
     implementation ("com.github.bumptech.glide:glide:$glideVersion")
     kapt ("com.github.bumptech.glide:compiler:$glideVersion")
